/*
 * CHANGELOG.
 */

03102008 - Changed some text files from ISO-8859-1 to UTF-8. Replaced all the
           translations with UTF-8 encoded equivalents.
03082008 - Fixed compiler warnings in Windows platform layer (thanks, Dennis!).
02202008 - Various archiver swap and compare functions now check if they are
           swapping/comparing an item against itself, for efficiency and
           to prevent overlapping memcpy() calls.
02132008 - Minor Windows fix (thanks, fydo!).
02012008 - lzma fixes (thanks, eH!).
01222008 - Upgraded lzma sdk, lzma.c improvements (thanks, Dennis!).
           Added zlib README, and updated LICENSE.txt.
01212008 - Fixed HTTP header in physfshttpd.c. Fixed utf-8 to UCS-2 allocation
           size in Windows code.
12112007 - Fixed incorrect directory test in Windows code (thanks, Buginator!).
10012007 - More mingw32 fixes.
07122007 - Maybe fixed compile on mingw32.
07112007 - Fixed crash on zero-byte read/write (thanks, Ensiform!).
05272007 - FIXME removal: Replaced a strncpy() with a memcpy().
05112007 - Minor documentation correction.
05052007 - Fixed zip archiver: could do bogus seek if a small, non-zip file
           got put through isArchive().
04292007 - Minor const correctness tweak in zip archiver.
04032007 - Added a "make dist" target for packing up source code releases.
           Reverted Unix recursive mutex code. There were some portability
           issues I didn't anticipate. Upped version to 1.1.1!
04022007 - Added wxWidgets-based test program (incomplete). Filled in and
           corrected some Doxygen comments.
04012007 - Added PHYSFS_isInit() and PHYSFS_symbolicLinksPermitted() functions.
03312007 - Added a quick'n'dirty unpack utility to the extras directory. Moved
           DIR archiver to start of the list, so we don't have to have every
           other archiver fail to open a directory as a file before mounting
           it. Fixed typos in makeos2.cmd and the Doxygen comments. Added